// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> matches snapshot 1`] = `
<div
  className="omnis adipisci eius laborum eius aut illo"
>
  <input
    aria-disabled={false}
    aria-required={false}
    disabled={false}
    name="fugiat error molestiae laborum est possimus assumenda"
    onChange={[MockFunction]}
    placeholder="enim iure facilis ut explicabo iure vitae"
    required={false}
    type="text"
    value="quia autem et modi tenetur amet modi"
  />
  <p>
    id sit delectus vel ipsa tempora aut
  </p>
</div>
`;

exports[`<TextInput /> matches snapshot 2`] = `
<div
  className="ducimus nemo doloremque maiores esse atque et"
>
  <input
    aria-disabled={false}
    aria-required={false}
    disabled={false}
    onChange={[MockFunction]}
    required={false}
    type="text"
    value={[Function]}
  />
</div>
`;

exports[`<TextInput /> matches snapshot 3`] = `
<div>
  <input
    aria-disabled={false}
    aria-required={false}
    disabled={false}
    name="nihil quam nulla est unde sit ex"
    onChange={[MockFunction]}
    placeholder="est doloremque explicabo eaque necessitatibus sit suscipit"
    required={false}
    type="text"
    value="et doloremque voluptate in sunt occaecati nulla"
  />
</div>
`;

exports[`<TextInput /> matches snapshot 4`] = `
<div>
  <input
    aria-disabled={false}
    aria-required={false}
    disabled={false}
    id="iusto sapiente nostrum aut corrupti sed consectetur"
    onChange={[MockFunction]}
    required={false}
    type="password"
    value={[Function]}
  />
  <p>
    laborum quos eum voluptate sit saepe assumenda
  </p>
</div>
`;

exports[`<TextInput /> matches snapshot 5`] = `
<div
  className="quo sunt possimus earum animi quis expedita"
>
  <input
    aria-disabled={false}
    aria-required={false}
    disabled={false}
    id="consequatur itaque et in fugit in rerum"
    name="odit aut labore qui aut inventore aut"
    onChange={[MockFunction]}
    placeholder="beatae incidunt ut ducimus fugiat et et"
    required={false}
    type="text"
    value={[Function]}
  />
</div>
`;

exports[`<TextInput /> matches snapshot 6`] = `
<div
  className="aliquam molestiae occaecati a culpa facilis eligendi"
>
  <input
    aria-disabled={false}
    aria-required={false}
    disabled={false}
    name="quas repellendus in dolores totam animi ipsum"
    onChange={[MockFunction]}
    required={false}
    type="password"
    value={[Function]}
  />
  <p>
    in eum ut dignissimos aspernatur voluptate voluptatem
  </p>
</div>
`;

exports[`<TextInput /> matches snapshot 7`] = `
<div
  className="aliquid ea animi architecto accusantium vel enim"
>
  <input
    aria-disabled={true}
    aria-required={false}
    disabled={true}
    id="eius dolorem amet quia quia aut sint"
    name="sunt mollitia quibusdam officia eum repudiandae minima"
    onChange={[MockFunction]}
    required={false}
    type="text"
    value="voluptatem quia dolores dolor voluptates sequi perferendis"
  />
</div>
`;

exports[`<TextInput /> matches snapshot 8`] = `
<div
  className="occaecati eveniet aut eligendi iusto sed pariatur"
>
  <input
    aria-disabled={false}
    aria-required={false}
    disabled={false}
    onChange={[MockFunction]}
    required={false}
    type="text"
    value="harum a aut esse unde ea voluptatem"
  />
  <p>
    saepe iure quia culpa suscipit totam libero
  </p>
</div>
`;

exports[`<TextInput /> matches snapshot 9`] = `
<div>
  <input
    aria-disabled={false}
    aria-required={true}
    disabled={false}
    id="quis ratione eveniet ea totam aut aut"
    name="enim rem qui hic dolore quibusdam quasi"
    onChange={[MockFunction]}
    placeholder="ut libero explicabo at quae autem eligendi"
    required={true}
    type="text"
    value="odio architecto ut quasi quasi accusantium modi"
  />
</div>
`;

exports[`<TextInput /> matches snapshot 10`] = `
<div
  className="ut illo sit rerum accusamus molestiae quia"
>
  <input
    aria-disabled={false}
    aria-required={false}
    disabled={false}
    id="in dolorem repudiandae possimus dignissimos esse qui"
    onChange={[MockFunction]}
    placeholder="molestiae quas omnis qui illo excepturi esse"
    required={false}
    type="password"
    value={[Function]}
  />
  <p>
    perspiciatis quas et quos esse dolores vitae
  </p>
</div>
`;

exports[`<TextInput /> matches snapshot 11`] = `
<div
  className="officiis omnis rem officiis et placeat ipsum"
>
  <Label
    htmlFor="molestias ut distinctio molestias placeat exercitationem unde"
  >
    voluptatem quod tempore temporibus impedit dolores saepe
  </Label>
  <input
    aria-disabled={false}
    aria-required={false}
    disabled={false}
    id="molestias ut distinctio molestias placeat exercitationem unde"
    onChange={[MockFunction]}
    required={false}
    type="text"
    value="voluptatibus consequatur provident qui delectus qui qui"
  />
  <p>
    id possimus quas dolor error eum incidunt
  </p>
</div>
`;

exports[`<TextInput /> matches snapshot 12`] = `
<div>
  <input
    aria-disabled={false}
    aria-required={false}
    disabled={false}
    onChange={[MockFunction]}
    required={false}
    type="password"
    value="sunt libero et et ratione qui voluptate"
  />
  <p>
    delectus aliquid et dicta ipsam qui provident
  </p>
</div>
`;

exports[`<TextInput /> matches snapshot 13`] = `
<div
  className="nobis possimus eos quia quam sit optio"
>
  <Label
    htmlFor="necessitatibus blanditiis deserunt accusantium debitis aut laborum"
  >
    molestiae dolores voluptas placeat vitae ut facere
  </Label>
  <input
    aria-disabled={true}
    aria-required={false}
    disabled={true}
    id="necessitatibus blanditiis deserunt accusantium debitis aut laborum"
    name="non nulla sit officia doloremque non sit"
    onChange={[MockFunction]}
    placeholder="perferendis soluta dignissimos cum non ea sed"
    required={false}
    type="password"
    value="ea ab doloremque est nemo iste omnis"
  />
  <p>
    modi soluta hic omnis atque inventore vitae
  </p>
</div>
`;

exports[`<TextInput /> matches snapshot 14`] = `
<div>
  <Label
    htmlFor="eligendi quis excepturi veritatis occaecati odit in"
  >
    facilis est laboriosam tempora aut cupiditate aut
  </Label>
  <input
    aria-disabled={false}
    aria-required={false}
    disabled={false}
    id="eligendi quis excepturi veritatis occaecati odit in"
    onChange={[MockFunction]}
    placeholder="error sed asperiores amet et quos repellat"
    required={false}
    type="text"
    value={[Function]}
  />
  <p>
    minus animi quis unde animi aut sapiente
  </p>
</div>
`;

exports[`<TextInput /> matches snapshot 15`] = `
<div>
  <input
    aria-disabled={false}
    aria-required={false}
    disabled={false}
    onChange={[MockFunction]}
    required={false}
    type="password"
    value={[Function]}
  />
</div>
`;

exports[`<TextInput /> matches snapshot 16`] = `
<div
  className="ut eum doloribus et perspiciatis sunt eligendi"
>
  <input
    aria-disabled={false}
    aria-required={false}
    disabled={false}
    id="vel earum quo fugiat et ut voluptate"
    onChange={[MockFunction]}
    placeholder="omnis blanditiis accusamus ut odit quo enim"
    required={false}
    type="text"
    value="consequuntur et provident repellat et qui veniam"
  />
  <p>
    sit eos maxime at doloribus aut maiores
  </p>
</div>
`;

exports[`<TextInput /> matches snapshot 17`] = `
<div>
  <input
    aria-disabled={false}
    aria-required={false}
    disabled={false}
    onChange={[MockFunction]}
    placeholder="aperiam quia est et suscipit ipsa et"
    required={false}
    type="text"
    value="voluptatem et autem doloremque earum cum et"
  />
  <p>
    autem et recusandae voluptatem possimus voluptas eaque
  </p>
</div>
`;

exports[`<TextInput /> matches snapshot 18`] = `
<div
  className="assumenda nihil ad ut maxime aliquid sint"
>
  <input
    aria-disabled={false}
    aria-required={true}
    disabled={false}
    name="veritatis voluptates suscipit reiciendis in exercitationem et"
    onChange={[MockFunction]}
    required={true}
    type="text"
    value={[Function]}
  />
</div>
`;

exports[`<TextInput /> matches snapshot 19`] = `
<div
  className="nihil sint occaecati dolore autem iste nesciunt"
>
  <input
    aria-disabled={false}
    aria-required={false}
    disabled={false}
    name="voluptatem dolores voluptas quidem excepturi temporibus facere"
    onChange={[MockFunction]}
    placeholder="velit odit ratione saepe id officia pariatur"
    required={false}
    type="password"
    value="excepturi fugit beatae ut ea rerum nobis"
  />
</div>
`;

exports[`<TextInput /> matches snapshot 20`] = `
<div
  className="quas consequuntur dolores nihil eligendi sunt aliquid"
>
  <input
    aria-disabled={true}
    aria-required={false}
    disabled={true}
    onChange={[MockFunction]}
    placeholder="sed voluptas ullam animi excepturi laborum veniam"
    required={false}
    type="password"
    value={[Function]}
  />
  <p>
    dolorem porro voluptates ut amet ea repellendus
  </p>
</div>
`;

exports[`<TextInput /> matches snapshot 21`] = `
<div
  className="ab laborum sint qui id ipsa est"
>
  <Label
    htmlFor="est quis est veniam eum laudantium accusamus"
  >
    sequi magnam doloremque laudantium dolorum magni molestias
  </Label>
  <input
    aria-disabled={false}
    aria-required={false}
    disabled={false}
    id="est quis est veniam eum laudantium accusamus"
    onChange={[MockFunction]}
    required={false}
    type="text"
    value={[Function]}
  />
  <p>
    laudantium hic quo corporis minima cupiditate dolor
  </p>
</div>
`;

exports[`<TextInput /> matches snapshot 22`] = `
<div
  className="voluptatem iusto tempore voluptas tempore accusamus vitae"
>
  <input
    aria-disabled={false}
    aria-required={false}
    disabled={false}
    id="officiis voluptatem veniam aut voluptas suscipit sit"
    onChange={[MockFunction]}
    placeholder="nulla officia rerum incidunt porro amet at"
    required={false}
    type="password"
    value="dolorum tempore animi vel possimus eos et"
  />
  <p>
    quia unde ex magni ullam ullam doloremque
  </p>
</div>
`;

exports[`<TextInput /> matches snapshot 23`] = `
<div
  className="impedit sint similique quos rem nihil voluptatem"
>
  <input
    aria-disabled={false}
    aria-required={false}
    disabled={false}
    name="voluptatem laboriosam sed est et sapiente ipsa"
    onChange={[MockFunction]}
    placeholder="nostrum repudiandae harum neque ut dolores qui"
    required={false}
    type="text"
    value={[Function]}
  />
  <p>
    qui cum quos eos iste aut inventore
  </p>
</div>
`;

exports[`<TextInput /> matches snapshot 24`] = `
<div>
  <input
    aria-disabled={false}
    aria-required={false}
    disabled={false}
    onChange={[MockFunction]}
    placeholder="iste ut a ut exercitationem voluptatem nam"
    required={false}
    type="password"
    value="doloribus et fuga adipisci saepe quam quia"
  />
</div>
`;

exports[`<TextInput /> matches snapshot 25`] = `
<div
  className="facere labore et ut unde consequatur sequi"
>
  <input
    aria-disabled={false}
    aria-required={false}
    disabled={false}
    name="autem voluptas delectus iure veniam est consequatur"
    onChange={[MockFunction]}
    required={false}
    type="email"
    value="accusamus et unde quia incidunt ex et"
  />
  <p>
    vel nisi culpa provident voluptatem sit id
  </p>
</div>
`;

exports[`<TextInput /> matches snapshot 26`] = `
<div>
  <input
    aria-disabled={false}
    aria-required={false}
    disabled={false}
    id="tenetur iure quos sed quibusdam voluptatem ducimus"
    onChange={[MockFunction]}
    placeholder="molestiae rem sunt aut quam provident voluptates"
    required={false}
    type="password"
    value="nostrum quae et consequatur dolor doloribus cum"
  />
  <p>
    unde ut beatae similique totam quia eum
  </p>
</div>
`;

exports[`<TextInput /> matches snapshot 27`] = `
<div>
  <input
    aria-disabled={false}
    aria-required={false}
    disabled={false}
    onChange={[MockFunction]}
    required={false}
    type="text"
    value={[Function]}
  />
  <p>
    quos nam labore aliquid non a quod
  </p>
</div>
`;

exports[`<TextInput /> matches snapshot 28`] = `
<div>
  <input
    aria-disabled={true}
    aria-required={false}
    disabled={true}
    id="suscipit impedit veniam perferendis est aliquam consequuntur"
    name="velit quibusdam aut in blanditiis quia aliquam"
    onChange={[MockFunction]}
    placeholder="exercitationem excepturi eligendi facilis similique optio hic"
    required={false}
    type="email"
    value={[Function]}
  />
  <p>
    laboriosam occaecati expedita quam ex et nobis
  </p>
</div>
`;

exports[`<TextInput /> matches snapshot 29`] = `
<div
  className="commodi harum et reiciendis mollitia quis dolor"
>
  <input
    aria-disabled={false}
    aria-required={false}
    disabled={false}
    name="velit perspiciatis mollitia ut corrupti sunt temporibus"
    onChange={[MockFunction]}
    placeholder="consequatur porro excepturi aperiam qui voluptatem rerum"
    required={false}
    type="password"
    value="et dolorem possimus quasi accusantium quaerat voluptatem"
  />
</div>
`;

exports[`<TextInput /> matches snapshot 30`] = `
<div
  className="incidunt provident assumenda sit pariatur quam et"
>
  <input
    aria-disabled={false}
    aria-required={false}
    disabled={false}
    onChange={[MockFunction]}
    placeholder="itaque vero repellendus ex eligendi possimus animi"
    required={false}
    type="email"
    value="modi expedita quaerat eos aut itaque ut"
  />
  <p>
    aut iste explicabo expedita eos ut id
  </p>
</div>
`;

exports[`<TextInput /> matches snapshot 31`] = `
<div>
  <input
    aria-disabled={true}
    aria-required={true}
    disabled={true}
    id="est doloremque et molestiae velit sequi sapiente"
    onChange={[MockFunction]}
    placeholder="sit porro dolor corrupti sit veniam est"
    required={true}
    type="password"
    value="laborum ut non fugit sint est dolores"
  />
</div>
`;

exports[`<TextInput /> matches snapshot 32`] = `
<div
  className="possimus voluptatem nemo laboriosam est explicabo velit"
>
  <input
    aria-disabled={true}
    aria-required={false}
    disabled={true}
    onChange={[MockFunction]}
    placeholder="exercitationem vitae magni a corrupti eveniet non"
    required={false}
    type="password"
    value="vel saepe et qui aut enim culpa"
  />
</div>
`;
